# shyphe

./: .gitignore  CMakeLists.txt  README.md  coverage.sh  setup.cfg  test.py
examples/: draw_shape.py  horde.py  snooker.py
src/: aabb.cpp  aabb.hpp  body.cpp  body.hpp  circle.cpp  circle.hpp  collider.cpp  collider.hpp  collisions.cpp  collisions.hpp  massshape.cpp  massshape.hpp  polygon.cpp  polygon.hpp  sataxes.cpp  sataxes.hpp  sensor.cpp  sensor.hpp  sensormap.cpp  sensormap.hpp  shape.cpp  shape.hpp  utils.hpp  vec.cpp  vec.hpp  world.cpp  world.hpp
src/python/: container_support.hpp  coverage.cpp  module.cpp  module.hpp  pair_support.hpp  setup.py.in  shared_ptr_support.hpp  tuple_support.hpp  wrap_body.cpp  wrap_collisions.cpp  wrap_sensors.cpp  wrap_vec.cpp  wrap_world.cpp
tests/: conftest.py  test_aabb.py  test_body.py  test_circle.py  test_collide_circle_circle.py  test_collide_circle_polygon.py  test_collide_polygon_polygon.py  test_collide_result.py  test_collider.py  test_mass_shape.py  test_polygon.py  test_sensor.py  test_sensor_map.py  test_utils.py  test_vec.py
